[metadata]
name = sprockets.mixins.mediatype
version = attr: sprockets.mixins.mediatype.__version__
description = A mixin for reporting handling content-type/accept headers.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE
home_page = https://github.com/sprockets/sprockets.mixins.mediatype
author = AWeber Communications
author_email = api@aweber.com
project_urls =
    Changelog = https://sprocketsmixinsmedia-type.readthedocs.io/en/latest/history.html
    Documentation = https://sprocketsmixinsmedia-type.readthedocs.io
    Download = https://pypi.org/project/sprockets.mixins.mediatype/
    Source = https://github.com/sprockets/sprockets.mixins.mediatype
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
	ietfparse>=1.5.1,<2
	tornado>=5,<7

[options.extras_require]
msgpack =
	u-msgpack-python>=2.5.0,<3
ci =
	coverage==5.5
	flake8==3.9.2
dev =
	coverage==5.5
	flake8==3.9.2
	tox==3.24.3


[build_sphinx]
fresh-env = 1
warning-is-error = 1

[check]
strict = 1

[coverage:report]
fail_under = 95
show_missing = 1

[coverage:run]
branch = 1
source = sprockets

[flake8]
exclude = build,env,.eggs

[nosetests]
cover-branches = 1
cover-erase = 1
cover-package = sprockets.mixins.mediatype
logging-level=DEBUG
verbosity=2
with-coverage=1
