[metadata]
name = sprockets.mixins.mediatype
version = attr: sprockets.mixins.mediatype.__version__
description = A mixin for reporting handling content-type/accept headers.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE
home_page = https://github.com/sprockets/sprockets.mixins.mediatype
author = AWeber Communications
author_email = api@aweber.com
project_urls =
    Changelog = https://sprocketsmixinsmedia-type.readthedocs.io/en/latest/history.html
    Documentation = https://sprocketsmixinsmedia-type.readthedocs.io
    Download = https://pypi.org/project/sprockets.mixins.mediatype/
    Source = https://github.com/sprockets/sprockets.mixins.mediatype
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
namespace_packages =
	sprockets
	sprockets.mixins
packages = find:
include_package_data = True
install_requires =
	ietfparse>=1.5.1,<2
	typing-extensions>=3.10 ; python_version<"3.8"
	tornado>=5,<7

[options.extras_require]
msgpack =
	u-msgpack-python>=2.5.0,<3
ci =
	coverage==5.5
	flake8==3.9.2
	mypy==0.910
	yapf==0.31.0
dev =
	coverage==5.5
	flake8==3.9.2
	mypy==0.910
	sphinx==4.2.0
	sphinx-rtd-theme==1.0.0
	sphinxcontrib-httpdomain==1.7.0
	tox==3.24.3
	yapf==0.31.0
docs =
	sphinx==4.2.0
	sphinx-rtd-theme==1.0.0
	sphinxcontrib-httpdomain==1.7.0

[options.package_data]
sprockets.mixins.mediatype = py.typed

[build_sphinx]
fresh-env = 1
warning-is-error = 1

[check]
strict = 1

[coverage:report]
fail_under = 100
show_missing = 1

[coverage:run]
branch = 1
omit =
	sprockets/mixins/mediatype/type_info.py
source = sprockets

[flake8]
exclude = build,env,.eggs

[mypy]
mypy_path = typestubs
strict = True
